--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -45,4 +45,4 @@ jobs:
         Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
         sleep 3
     - name: Build with Gradle
-      run: xvfb-run -a ./gradlew test build --info
+      run: xvfb-run -a ./gradlew test build jacocoTestReport sonarqube --info
